--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev -p 3617 --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -13,12 +13,15 @@
     "@radix-ui/react-slot": "^1.2.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "latest": "^0.2.0",
     "lucide-react": "^0.523.0",
+    "n": "^10.2.0",
     "next": "15.3.4",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.6.3",
+    "stable": "^0.1.8",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
